--- a/index.html
+++ b/index.html
@@ -113,14 +113,13 @@
       <li>Social Media Management (Instagram, Facebook, TikTok)</li>
       <li>TikTok Ads & Product Promotions</li>
       <li>Shopify & TikTok Shop Handling</li>
-      <li>AI YouTube Video Creation (Shorts, Motivational, Horror)</li>
       <li>HTML/CSS/JS Portfolio Sites</li>
     </ul>
   </section>
 
   <div class="contact">
     <h2>Contact Me</h2>
-    <p>Email: chagharzaipress@gmail.com</p>
+    <p>Email: usana1575@gmail.com</p>
     <p>Phone: +92340 8671208</p>
     <a href="https://wa.me/923408671208" target="_blank">📲 Message on WhatsApp</a>
     <br /><br />
