--- a/index.html
+++ b/index.html
@@ -1,135 +1,27 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Sana Ullah - Digital Services Portfolio</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+<!-- Navbar -->
+<nav class="navbar">
+  <div class="logo">Sana's Portfolio</div>
+  <ul class="nav-links">
+    <li><a href="#home">Home</a></li>
+    <li><a href="#about">About Us</a></li>
+    <li><a href="#contact">Contact Us</a></li>
+  </ul>
+</nav>
 
-  <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-      font-family: 'Poppins', sans-serif;
-    }
-    body {
-      background: #f4f6f8;
-      color: #333;
-      line-height: 1.6;
-    }
-    header {
-      background: #0d47a1;
-      color: white;
-      padding: 30px 20px;
-      text-align: center;
-    }
-    header h1 {
-      font-size: 2.5em;
-    }
-    header p {
-      font-size: 1.2em;
-    }
-    section {
-      padding: 40px 20px;
-      max-width: 1000px;
-      margin: auto;
-    }
-    h2 {
-      color: #0d47a1;
-      margin-bottom: 15px;
-    }
-    .service {
-      background: white;
-      padding: 20px;
-      margin-bottom: 30px;
-      border-left: 5px solid #0d47a1;
-      box-shadow: 0 0 10px rgba(0,0,0,0.05);
-    }
-    .contact {
-      text-align: center;
-      background: #0d47a1;
-      color: white;
-      padding: 40px 20px;
-    }
-    .contact a {
-      display: inline-block;
-      background: white;
-      color: #0d47a1;
-      padding: 12px 25px;
-      text-decoration: none;
-      border-radius: 30px;
-      font-weight: bold;
-      margin-top: 15px;
-    }
-    .footer {
-      background: #003067;
-      color: #ccc;
-      text-align: center;
-      padding: 20px;
-      font-size: 0.9em;
-    }
-  </style>
-</head>
-<body>
-  <header>
-    <h1>Sana Ullah</h1>
-    <p>Meta Ads Specialist | Excel VBA Developer | Canva Designer</p>
-  </header>
+<!-- Home Section -->
+<section id="home">
+  <h1>Welcome to My Portfolio</h1>
+  <p>This is the home section.</p>
+</section>
 
-  <section>
-    <h2>Top 3 Services</h2>
+<!-- About Section -->
+<section id="about">
+  <h2>About Me</h2>
+  <p>Write a short bio here...</p>
+</section>
 
-    <div class="service">
-      <h3>1. Meta Ads & Paid Campaigns Expert</h3>
-      <p>I create high-performing Facebook & Instagram ad campaigns for lead generation, traffic, engagement, and sales. I've helped businesses in real estate, education, and eCommerce grow their reach and ROI using precise targeting and creative strategies.</p>
-      <ul>
-        <li>Campaign Types: Lead Generation, Traffic, WhatsApp Leads</li>
-        <li>Clients: Real Estate, Colleges, eCommerce Brands</li>
-      </ul>
-    </div>
-
-    <div class="service">
-      <h3>2. Excel VBA Automation Developer</h3>
-      <p>I build smart Excel systems with automated invoicing, PDF saving, arrears tracking, and professional dashboards. My invoice system is trusted by 100+ businesses and includes advanced reporting features.</p>
-      <ul>
-        <li>Auto Invoicing | PDF Save | WhatsApp Integration</li>
-        <li>Travel Agency & Petrol Pump Software (In Progress)</li>
-      </ul>
-    </div>
-
-    <div class="service">
-      <h3>3. Graphic Designing (Canva Expert)</h3>
-      <p>I design professional visuals for social media, marketing, and print using Canva Pro. My designs include posts, flyers, brochures, business cards, and wedding cards – optimized for engagement and branding.</p>
-      <ul>
-        <li>Social Media Posts | Brochures | Wedding Cards</li>
-        <li>Tools: Canva Pro, Brand Kits, Custom Templates</li>
-      </ul>
-    </div>
-  </section>
-
-  <section>
-    <h2>Other Services</h2>
-    <ul>
-      <li>Social Media Management (Instagram, Facebook, TikTok)</li>
-      <li>TikTok Ads & Product Promotions</li>
-      <li>Shopify & TikTok Shop Handling</li>
-      <li>HTML/CSS/JS Portfolio Sites</li>
-    </ul>
-  </section>
-
-  <div class="contact">
-    <h2>Contact Me</h2>
-    <p>Email: usana1575@gmail.com</p>
-    <p>Phone: +92340 8671208</p>
-    <a href="https://wa.me/923408671208" target="_blank">📲 Message on WhatsApp</a>
-    <br /><br />
-    <a href="#" download>📄 Download My Portfolio (PDF)</a>
-  </div>
-
-  <div class="footer">
-    &copy; 2025 Sana Ullah. All rights reserved.
-  </div>
-</body>
-</html>
+<!-- Contact Section -->
+<section id="contact">
+  <h2>Contact Me</h2>
+  <p>Email: sana@example.com</p>
+</section>
