Update portfolio name and contact email

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!-- Navbar -->
 <nav class="navbar">
-  <div class="logo">Sana's Portfolio</div>
+  <div class="logo">Sana Ullah Portfolio</div>
   <ul class="nav-links">
     <li><a href="#home">Home</a></li>
     <li><a href="#about">About Us</a></li>
@@ -23,5 +23,5 @@
 <!-- Contact Section -->
 <section id="contact">
   <h2>Contact Me</h2>
-  <p>Email: sana@example.com</p>
+  <p>Email: usana1575@gmail.com</p>
 </section>
