Add CSS link to index.html

--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<!-- CSS -->
+<link rel="stylesheet" href="style.css">
+
 <!-- Navbar -->
 <nav class="navbar">
   <div class="logo">Sana Ullah Portfolio</div>
