Add head section to index.html
Add head section with meta and title for portfolio.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
-<!-- CSS -->
-<link rel="stylesheet" href="style.css">
+<head>
+  <meta charset="UTF-8">
+  <title>Sana's Portfolio</title>
+  <link rel="stylesheet" href="style.css">
+</head>
 
 <!-- Navbar -->
 <nav class="navbar">
