Update title in index.html to 'Sana Ullah Portfolio'

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <head>
   <meta charset="UTF-8">
-  <title>Sana's Portfolio</title>
+  <title>Sana Ullah Portfolio</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
